src/objects/BigMachines__Configuration_Record__c.object
<CustomObject>
    <description>A set of parameters used for integrating a Oracle CPQ Cloud site to this Salesforce org.</description>
    <fields>
        <fullName>BigMachines__API_Login__c</fullName>
        <label>API Admin Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__API_Password__c</fullName>
        <label>API Admin Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Connected_App_Name__c</fullName>
        <inlineHelpText>The name of the Connected App to be used.</inlineHelpText>
        <label>Connected App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Access_Type__c</fullName>
        <description>Default value for Oracle_User__c.Allow_Quote_Creation__c for new users associated with this CPQ Site.</description>
        <label>Default Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FullAccess</fullName>
                </value>
                <value>
                    <fullName>SalesAgent</fullName>
                </value>
                <value>
                    <fullName>ChannelAgent</fullName>
                </value>
                <value>
                    <fullName>BuyAccess</fullName>
                </value>
                <value>
                    <fullName>RestrictedAccess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Allow_Quote_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default value for Oracle_User__c.Allow_Quote_Creation__c for new users associated with this CPQ Site.</description>
        <label>Default Allow Quote Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Association_to_Organization__c</fullName>
        <description>Default value for Oracle_User__c.Association_to_Organization__c for new users associated with this CPQ Site.</description>
        <label>Default Association to Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal User</fullName>
                </value>
                <value>
                    <fullName>Partner User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Bulk_Synchronization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default value for Oracle_User__c.Bulk_Synchronization__c for new users associated with this CPQ Site.</description>
        <label>Default Suspend Oracle CPQ Cloud Synch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Currency_Preference__c</fullName>
        <description>Default value for Oracle_User__c.Currency_Preference__c for new users associated with this CPQ Site.</description>
        <label>Default Currency Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Date_Time_Format__c</fullName>
        <description>Default value for Oracle_User__c.Date_Time_Format__c for new users associated with this CPQ Site.</description>
        <label>Default Date/Time Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>dd/MM/yyyy HH:mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Language_Preference__c</fullName>
        <description>Default value for Oracle_User__c.Language_Preference__c for new users associated with this CPQ Site.</description>
        <label>Default Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                    <default>true</default>
                    <label>Spanish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Number_Format__c</fullName>
        <description>Default value for Oracle_User__c.Number_Format__c for new users associated with this CPQ Site.</description>
        <label>Default Number Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>####.##</fullName>
                </value>
                <value>
                    <fullName>####,##</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Provisioned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default value for Oracle_User__c.Provisioned__c for new users associated with this CPQ Site.</description>
        <label>Default Synch with Oracle CPQ Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Time_Zone__c</fullName>
        <description>Default value for Oracle_User__c.Time_Zone__c for new users associated with this CPQ Site.</description>
        <label>Default Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT-11:00 GMT-11:00) Samoa</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00 GMT-10:00) Hawaii</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00 GMT-9:00) Aleutian</fullName>
                </value>
                <value>
                    <fullName>(GMT-9:30 GMT-9:30) Marquesas</fullName>
                </value>
                <value>
                    <fullName>(GMT-9:00 GMT-9:00) Gambier</fullName>
                </value>
                <value>
                    <fullName>(GMT-9:00 GMT-8:00) Alaska</fullName>
                </value>
                <value>
                    <fullName>(GMT-8:00 GMT-8:00) Pitcairn</fullName>
                </value>
                <value>
                    <fullName>(GMT-8:00 GMT-7:00) US Pacific Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-7:00 GMT-7:00) Arizona</fullName>
                </value>
                <value>
                    <fullName>(GMT-7:00 GMT-6:00) Mountain</fullName>
                </value>
                <value>
                    <fullName>(GMT-6:00 GMT-6:00) Saskatchewan</fullName>
                </value>
                <value>
                    <fullName>(GMT-6:00 GMT-5:00) US Central Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-5:00 GMT-5:00) Indianapolis</fullName>
                </value>
                <value>
                    <fullName>(GMT-5:00 GMT-4:00) US Eastern Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-4:00 GMT-4:00) Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>(GMT-3:00 GMT-4:00) Chile</fullName>
                </value>
                <value>
                    <fullName>(GMT-4:00 GMT-3:00) Canada Atlantic Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-3:00 GMT-3:00) Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>(GMT-3:30 GMT-2:30) Newfoundland</fullName>
                </value>
                <value>
                    <fullName>(GMT-2:00 GMT-3:00) Sao Paulo</fullName>
                </value>
                <value>
                    <fullName>(GMT-2:00 GMT-2:00) Brazil/DeNoronha</fullName>
                </value>
                <value>
                    <fullName>(GMT-1:00 GMT-1:00) Cape Verde</fullName>
                </value>
                <value>
                    <fullName>(GMT-1:00 GMT+0:00) Azores</fullName>
                </value>
                <value>
                    <fullName>(GMT+0:00 GMT+0:00) GMT</fullName>
                </value>
                <value>
                    <fullName>(GMT+0:00 GMT+1:00) London</fullName>
                </value>
                <value>
                    <fullName>(GMT+1:00 GMT+1:00) Algiers</fullName>
                </value>
                <value>
                    <fullName>(GMT+2:00 GMT+1:00) Windhoek</fullName>
                </value>
                <value>
                    <fullName>(GMT+1:00 GMT+2:00) Amsterdam</fullName>
                </value>
                <value>
                    <fullName>(GMT+2:00 GMT+2:00) Tripoli</fullName>
                </value>
                <value>
                    <fullName>(GMT+2:00 GMT+3:00) Israel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Default_Unit_System__c</fullName>
        <description>Default value for Oracle_User__c.Unit_System__c for new users associated with this CPQ Site.</description>
        <label>Default Unit System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>System Default</fullName>
                    <default>true</default>
                    <label>System Default</label>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Metric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Default_User_Groups__c</fullName>
        <description>Default value for Oracle_User__c.User_Groups__c for new users associated with this CPQ Site.</description>
        <label>Default User Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>fieldService</fullName>
                    <label>Profesional</label>
                </value>
                <value>
                    <fullName>salesUser</fullName>
                    <label>Gestor</label>
                </value>
                <value>
                    <fullName>salesUserSupervisor</fullName>
                    <label>Gestor Supervisor</label>
                </value>
                <value>
                    <fullName>businssAdminstrator</fullName>
                    <label>Revisor</label>
                </value>
                <value>
                    <fullName>technicalAdminstrator</fullName>
                    <label>Admin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BigMachines__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Password_Encrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked based on whether or not the password currently stored is encrypted.</description>
        <label>Password Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Primary_Commerce_Process__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Multiple commerce processes on a CPQ instance can integrated with Salesforce.  Unchecking this field indicates that this CPQ Cloud Site will be used to integrate with a second commerce process.  As commerce processes share users, secondary commerce processes cannot synchronize users.</description>
        <inlineHelpText>Leave this field checked unless integrating with a second commerce process.</inlineHelpText>
        <label>Primary Commerce Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Access_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Access Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Allow_Quote_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Allow Quote Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Association_to_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Association to Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Bulk_Synchronization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Suspend Oracle CPQ Synch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Currency_Preference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Currency Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Date_Time_Format__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Date/Time Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Language_Preference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Language Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Number_Format__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Number Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Provisioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Synch with Oracle CPQ Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Time_Zone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Time Zone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_Unit_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default Unit System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Use_Default_User_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Default User Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__Uses_SSL__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Uses SSL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigMachines__action_id_copy__c</fullName>
        <inlineHelpText>action_id_copy</inlineHelpText>
        <label>Copy Action ID</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__action_id_open__c</fullName>
        <inlineHelpText>action_id_open</inlineHelpText>
        <label>Open Action ID</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__bm_site__c</fullName>
        <inlineHelpText>site URL</inlineHelpText>
        <label>Site Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__document_id__c</fullName>
        <inlineHelpText>document_id</inlineHelpText>
        <label>Document ID</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__process__c</fullName>
        <inlineHelpText>process</inlineHelpText>
        <label>Process Variable Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__process_id__c</fullName>
        <inlineHelpText>process_id</inlineHelpText>
        <label>Process ID</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigMachines__version_id__c</fullName>
        <inlineHelpText>version_id</inlineHelpText>
        <label>Version ID</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Oracle CPQ Cloud Site</label>
    <listViews>
        <fullName>BigMachines__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SITE-{000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oracle CPQ Cloud Site Setup</pluralLabel>
    <recordTypes>
        <fullName>BigMachines__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>